packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/valid/merge-multiple-files/upgrade-event-type/input-001.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if upgrading the attributes of an event type works as expected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" compress="true" data-type="string:10:cs"/>
    </objecttypes>
    <concepts>
      <concept name="a" version="1" description="a" display-name-singular="a" display-name-plural="a"/>
    </concepts>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <!-- No changes, only a version increment. -->
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="2">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="changed-description" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="3">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="a" summary="[[a]]" story="[[a]]" version="4">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" summary="[[a]]" story="[[a]]" version="5">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" summary="changed summary" story="[[a]]" version="6">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" summary="changed summary" story="changed-story" version="7">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="changed-description" display-name-singular="changed-display-name-singular" display-name-plural="changed-display-name-plural" summary="changed summary" story="changed-story" classlist="class" version="8">
        <properties>
          <property name="a" object-type="a" description="a" unique="true" optional="false" multivalued="false" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
