packages/edxml-test-corpus/edxml-test-corpus-3.0.0.dev2.tar.gz/edxml-test-corpus-3.0.0.dev2/edxml_test_corpus/tests/invalid/ontology/upgrade-immutable-event-type-event-sequence.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if upgrading the event sequence property of an event type is refused.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="sequence"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" sequence="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" unique="false" optional="false" multivalued="false" merge="drop"/>
          <property name="b" object-type="a" description="a" unique="false" optional="false" multivalued="false" merge="drop"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" sequence="b" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="2">
        <properties>
          <property name="a" object-type="a" description="a" unique="false" optional="false" multivalued="false" merge="drop"/>
          <property name="b" object-type="a" description="a" unique="false" optional="false" multivalued="false" merge="drop"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources/>
  </ontology>
</edxml>
